--- a/agente-criativa-xyz/whatsapp_handler_node/Dockerfile
+++ b/agente-criativa-xyz/whatsapp_handler_node/Dockerfile
@@ -1,6 +1,20 @@
 # Use an official Node.js runtime as a parent image
 FROM node:18-slim
 
+# Install required libraries for Puppeteer
+RUN apt-get update && apt-get install -y \
+    libglib2.0-0 \
+    libnss3 \
+    libatk1.0-0 \
+    libatk-bridge2.0-0 \
+    libcups2 \
+    libdrm2 \
+    libgtk-3-0 \
+    libgbm1 \
+    libasound2 \
+    --no-install-recommends \
+    && rm -rf /var/lib/apt/lists/*
+
 # Set the working directory in the container
 WORKDIR /app
 
@@ -18,3 +32,4 @@ EXPOSE 3000
 
 # Run the index.js file when the container launches
 CMD ["node", "index.js"]
+
