Atualiza .gitignore para incluir o diretório .wwebjs_cache, garantindo que arquivos de cache não sejam rastreados pelo Git.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ node_modules/
 # Contém as credenciais de autenticação da sua sessão do WhatsApp. É um dado sensível.
 .wwebjs_auth/
 agente-criativa-xyz/whatsapp_handler_node/.wwebjs_auth/
+agente-criativa-xyz/whatsapp_handler_node/.wwebjs_cache
 
 # Arquivos de Variáveis de Ambiente
 # Contêm segredos, chaves de API e configurações locais. NUNCA devem ir para o repositório.
