--- a/agente-criativa-xyz/agent_logic_python/Dockerfile
+++ b/agente-criativa-xyz/agent_logic_python/Dockerfile
@@ -1,14 +1,21 @@
-# Use an official Python runtime as a parent image
-FROM python:3.9-slim
+# Use Python 3.11 (requerido pelo CrewAI)
+FROM python:3.11-slim
 
 # Set the working directory in the container
 WORKDIR /app
 
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    gcc \
+    g++ \
+    && rm -rf /var/lib/apt/lists/*
+
 # Copy the requirements file into the container
 COPY requirements.txt .
 
-# Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+# Upgrade pip and install Python packages
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code into the container
 COPY . .
@@ -17,5 +24,4 @@ COPY . .
 EXPOSE 8000
 
 # Run the uvicorn server when the container launches
-# Assumes your FastAPI app instance is named 'app' in main.py
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
