--- a/agente-criativa-xyz/docker-compose.yml
+++ b/agente-criativa-xyz/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   agent_logic:
     build:
@@ -9,6 +7,12 @@ services:
       - "8000:8000"
     volumes:
       - ./agent_logic_python:/app
+    env_file:
+      - ./docker.env
+    environment:
+      - PYTHONPATH=/app
+      - PYTHONUNBUFFERED=1
+    restart: unless-stopped
     # depends_on:
     #   - whatsapp_handler # Uncomment if agent_logic depends on whatsapp_handler starting first
 
@@ -21,6 +25,7 @@ services:
     volumes:
       - ./whatsapp_handler_node:/app
       - /app/node_modules # Avoid copying node_modules from host
+    restart: unless-stopped
     # depends_on:
     #   - agent_logic # Uncomment if whatsapp_handler depends on agent_logic starting first
 
