--- a/agente-criativa-xyz/whatsapp_handler_node/Dockerfile
+++ b/agente-criativa-xyz/whatsapp_handler_node/Dockerfile
@@ -1,5 +1,16 @@
-# Use an official Node.js runtime as a parent image
+# Use an official Node.js runtime with Chrome
 FROM node:18-slim
+
+# Install Chrome dependencies
+RUN apt-get update && apt-get install -y \
+    chromium \
+    fonts-liberation \
+    xdg-utils \
+    && rm -rf /var/lib/apt/lists/*
+
+# Set environment variable for Puppeteer to use installed Chrome
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+ENV PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
 
 # Set the working directory in the container
 WORKDIR /app
@@ -17,4 +28,4 @@ COPY . .
 EXPOSE 3000
 
 # Run the index.js file when the container launches
-CMD ["node", "index.js"]z
+CMD ["node", "index.js"]
