--- a/agente-criativa-xyz/agent_logic_python/Dockerfile
+++ b/agente-criativa-xyz/agent_logic_python/Dockerfile
@@ -14,9 +14,9 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 
 # Upgrade pip and install Python packages
-RUN pip install --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
+    
 # Copy the rest of the application code into the container
 COPY . .
 
