--- a/agente-criativa-xyz/agent_logic_python/requirements.txt
+++ b/agente-criativa-xyz/agent_logic_python/requirements.txt
@@ -6,10 +6,7 @@ python-dotenv==1.0.0
 pydantic==2.5.0
 python-multipart==0.0.6
 
-# CrewAI and related tools
-crewai==0.35.8
-crewai-tools[mcp]==0.2.7
-langchain_community==0.2.0
+langchain_community
 
 # Additional utilities
 python-dateutil==2.8.2
